# fastapi-example

./: pyproject.toml
example/: basic.py  bg_tasks.py  dependency.py  main.py
